docs/content/v2.0.0/index.mdx
&nbsp;

# Yaci Store Documentation

Welcome to the comprehensive documentation for **Yaci Store v2.0.0-beta3**, a powerful Cardano blockchain data indexing and storage solution.

## 🆕 What's New in v2.0.0-beta3

<div style={{
  background: 'linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(37, 99, 235, 0.1) 100%)',
  color: 'inherit',
  padding: '1.5rem',
  borderRadius: '12px',
  marginBottom: '2rem',
  border: '1px solid rgba(59, 130, 246, 0.2)'
}}>

### 🎯 **Major Enhancements**
- **🔍 Extended Network Support**: Now supports **Mainnet up to epoch 569**, **Preprod up to epoch 227**, and **Preview up to epoch 989**
- **📊 Native Monitoring**: Built-in **Prometheus metrics** and **Grafana dashboards** for comprehensive observability
- **🏛️ Enhanced Governance**: Improved governance state calculation with better accuracy and reliability
- **⚡ Performance Optimizations**: Better reward calculation efficiency during epoch transitions

### 🐛 **Critical Fixes from beta1**
- ✅ Resolved treasury and reserves calculation mismatches (epoch 546 issues)
- ✅ Fixed governance proposal status discrepancies with DB Sync
- ✅ Enhanced DRep distribution accuracy across epoch ranges
- ✅ Improved synchronization timing for governance data

### 🚀 **Upgrade Highlights**
- **Monitoring Ready**: Production-grade observability out of the box
- **Enterprise Stability**: Trusted by Cardano Foundation (Rosetta API, Ballot, Reeve Platform), FluidTokens, SundaeSwap Analytics, and more
- **Developer Experience**: Enhanced admin CLI and better documentation

</div>

> 📖 **See the full details**: Check out our comprehensive [Changelog](/docs/v2.0.0/changelogs) for complete version history and migration guides.

---

## 📦 What is Yaci Store?

**Yaci Store** is a comprehensive Cardano blockchain indexing solution that works in two ways: as a **ready-to-use indexer** for immediate deployment, and as a **modular Java library** for building custom indexing solutions. Whether you need quick setup or tailored functionality, Yaci Store provides both out-of-the-box applications and developer-friendly libraries with Spring Boot integration.

## What You Can Build
- **Custom Indexers**: Create specialized indexers for specific use cases
- **Analytics Platforms**: Build comprehensive blockchain analytics tools
- **DApp Backends**: Power decentralized applications with reliable data access
- **Integration Services**: Connect traditional systems with Cardano blockchain data
- **Monitoring Tools**: Track network activity and performance metrics

## Key Capabilities
- **Transaction Processing**: Index blocks, transactions, and UTXOs with full metadata
- **Native Assets**: Handle ADA and native tokens with complete asset information
- **Selective Indexing**: Choose exactly what data to process for optimal performance
- **Rollback Management**: Automatic handling of chain reorganizations
- **Developer-Friendly**: Comprehensive APIs and Spring Boot integration

## Getting Started

<div style={{
  display: 'grid',
  gridTemplateColumns: 'repeat(auto-fit, minmax(300px, 1fr))',  
  gap: '1.5rem',
  marginTop: '1.5rem'
}}>

<div style={{
  background: 'linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(37, 99, 235, 0.1) 100%)',
  border: '1px solid rgba(59, 130, 246, 0.2)',
  borderRadius: '12px',
  padding: '1.5rem',
  transition: 'transform 0.2s ease, box-shadow 0.2s ease'
}}>

### [🚀 Out-of-the-Box Indexer](/docs/v2.0.0/usage/outOfTheBoxIndexer)
Ready-to-use indexing solution with minimal configuration required. Perfect for getting started quickly with pre-built indexing capabilities.

</div>

<div style={{
  background: 'linear-gradient(135deg, rgba(16, 185, 129, 0.1) 0%, rgba(5, 150, 105, 0.1) 100%)',
  border: '1px solid rgba(16, 185, 129, 0.2)',
  borderRadius: '12px',
  padding: '1.5rem',
  transition: 'transform 0.2s ease, box-shadow 0.2s ease'
}}>

### [📚 Use as Library](/docs/v2.0.0/usage/asALibrary)
Integrate Yaci Store into your existing Spring Boot applications. Build custom solutions with modular components.

</div>

<div style={{
  background: 'linear-gradient(135deg, rgba(168, 85, 247, 0.1) 0%, rgba(147, 51, 234, 0.1) 100%)',
  border: '1px solid rgba(168, 85, 247, 0.2)',
  borderRadius: '12px',
  padding: '1.5rem',
  transition: 'transform 0.2s ease, box-shadow 0.2s ease'
}}>

### [⚖️ Ledger State](/docs/v2.0.0/usage/ledgerState)
Access and query Cardano ledger state information including epoch data, rewards, and governance details.

</div>

</div>

## Quick Links

<div style={{
  display: 'grid',
  gridTemplateColumns: 'repeat(3, 1fr)',
  gap: '1rem',
  marginTop: '1.5rem'
}}>

<a href="/docs/v2.0.0/gettingStarted/installation/buildAndRun" style={{
  display: 'flex',
  alignItems: 'center',
  gap: '0.75rem',
  padding: '1rem',
  background: 'linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(37, 99, 235, 0.1) 100%)',
  border: '1px solid rgba(59, 130, 246, 0.2)',
  borderRadius: '8px',
  textDecoration: 'none',
  color: 'inherit',
  transition: 'transform 0.2s ease, box-shadow 0.2s ease'
}}>
  <span style={{ fontSize: '1.5rem' }}>🚀</span>
  <span style={{ fontWeight: '600' }}>Installation Guide</span>
</a>

<a href="/docs/v2.0.0/apis/apiList" style={{
  display: 'flex',
  alignItems: 'center',
  gap: '0.75rem',
  padding: '1rem',
  background: 'linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(37, 99, 235, 0.1) 100%)',
  border: '1px solid rgba(59, 130, 246, 0.2)',
  borderRadius: '8px',
  textDecoration: 'none',
  color: 'inherit',
  transition: 'transform 0.2s ease, box-shadow 0.2s ease'
}}>
  <span style={{ fontSize: '1.5rem' }}>📋</span>
  <span style={{ fontWeight: '600' }}>API Documentation</span>
</a>

<a href="/docs/v2.0.0/yacistore/design" style={{
  display: 'flex',
  alignItems: 'center',
  gap: '0.75rem',
  padding: '1rem',
  background: 'linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(37, 99, 235, 0.1) 100%)',
  border: '1px solid rgba(59, 130, 246, 0.2)',
  borderRadius: '8px',
  textDecoration: 'none',
  color: 'inherit',
  transition: 'transform 0.2s ease, box-shadow 0.2s ease'
}}>
  <span style={{ fontSize: '1.5rem' }}>🏗️</span>
  <span style={{ fontWeight: '600' }}>Architecture Overview</span>
</a>

<a href="/docs/v2.0.0/faq" style={{
  display: 'flex',
  alignItems: 'center',
  gap: '0.75rem',
  padding: '1rem',
  background: 'linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(37, 99, 235, 0.1) 100%)',
  border: '1px solid rgba(59, 130, 246, 0.2)',
  borderRadius: '8px',
  textDecoration: 'none',
  color: 'inherit',
  transition: 'transform 0.2s ease, box-shadow 0.2s ease'
}}>
  <span style={{ fontSize: '1.5rem' }}>❓</span>
  <span style={{ fontWeight: '600' }}>FAQ</span>
</a>

<a href="/docs/v2.0.0/troubleshooting/libraryTroubleshooting" style={{
  display: 'flex',
  alignItems: 'center',
  gap: '0.75rem',
  padding: '1rem',
  background: 'linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(37, 99, 235, 0.1) 100%)',
  border: '1px solid rgba(59, 130, 246, 0.2)',
  borderRadius: '8px',
  textDecoration: 'none',
  color: 'inherit',
  transition: 'transform 0.2s ease, box-shadow 0.2s ease'
}}>
  <span style={{ fontSize: '1.5rem' }}>🔧</span>
  <span style={{ fontWeight: '600' }}>Troubleshooting</span>
</a>

</div>

## Core Features

- **Modular Design**: Choose specific components for your indexing needs
- **Spring Boot Integration**: Seamless integration with Spring ecosystem
- **Database Support**: PostgreSQL, MySQL, and H2 backends
- **Real-time Indexing**: Keep up with the latest blockchain data
- **REST API**: Query indexed data via comprehensive REST endpoints
- **Horizontal Scaling**: Deploy across multiple instances
- **Selective Processing**: Index only the data your application requires

## Latest Version

- **Current Version**: v2.0.0-beta3 (This documentation)
- **Previous Version**: [v0.1.x](/docs/v0.1.x) (Legacy)
- **Latest Updates**: See [Changelogs](/docs/v2.0.0/changelogs) for current updates
- **Community Support**: Join our [Discord Community](https://discord.gg/6AnKrFx4ne) for help and discussions